--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^0.19.0",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
-    "expo-constants": "6.0.0",
+    "expo-constants": "^7.0.0",
     "expo-font": "~6.0.0",
+    "expo-location": "^7.0.0",
+    "expo-permissions": "^7.0.0",
     "expo-web-browser": "6.0.0",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
